--- a/GetEncodingNet/ModelTrain/ModelTrain.csproj
+++ b/GetEncodingNet/ModelTrain/ModelTrain.csproj
@@ -47,6 +47,9 @@
     <Compile Include="NGramHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResultClass.cs" />
+    <Compile Include="ScriptCommand.cs" />
+    <Compile Include="SrciptToCs.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
